jenkins_mock/examples/single_rpm/repos/hello/kubeobjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: single-rpm
  labels:
    app: single-rpm
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: single-rpm
    deploymentconfig: single-rpm
