jenkins_mock/examples/single_rpm/repos/hello/kubeobjs/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: single-rpm
  labels:
    app: single-rpm
spec:
  to:
    kind: Service
    name: single-rpm
